--- a/index.html
+++ b/index.html
@@ -950,12 +950,12 @@
                                     ควรพาลูกมาพบทันตแพทย์อย่างสม่ำเสมอ เริ่มตั้งแต่อายุ 1 ปี
                                 </h5>
                                 <h5 id="pedodontics3">การเคลือบฟลูออไรด์</h5>
-                                <p>ฟลูออไรด์เป็นสารที่ช่วยป้องกันฟันผุอย่างมีประสิทธิภาพ
+                                <p class="mb-3">ฟลูออไรด์เป็นสารที่ช่วยป้องกันฟันผุอย่างมีประสิทธิภาพ
                                     ฟลูออไรด์จะทำให้เกิดผลึกที่ผิวเคลือบฟัน
                                     ซึ่งมีความแข็งแรงทนทานต่อการกัดกร่อนของกรดที่เกิดจากแบคทีเรียที่แผ่นคราบฟัน
                                     นอกจากนี้ฟลูออไรด์ยังมีคุณสมบัติในการซ่อมรอยผุของฟันในระยะแรกเริ่ม ด้วยกลไก
                                     Recalcification</p>
-                                <h5>เราได้รับฟลูออไรด์จากทางใดบ้าง</h5>
+                                <h5 class="text-left">เราได้รับฟลูออไรด์จากทางใดบ้าง</h5>
                                 <ul>
                                     <li>การรับประทาน
                                         ในต่างประเทศจะมีการเติมสารฟลูออไรด์ลงในน้ำประปา เพื่อป้องกันฟันผุ
@@ -985,10 +985,10 @@
                                     ซี่ 1, 2 และ 3 ขึ้นเมื่ออายุประมาณ 6 ปี 12 ปี และ 18-25 ปี ตามลำดับ
                                     ก็ควรเคลือบหลุมร่องฟันเพื่อป้องกันฟันผุด้วย</p>
                                 <h5 id="pedodontics5">การแปรงฟัน (Brushing)</h5>
-                                <p>ควรเลือกแปรงสีฟันที่มีขนาดพอเหมาะ ขนแปรงนุ่ม
+                                <p class="mb-3">ควรเลือกแปรงสีฟันที่มีขนาดพอเหมาะ ขนแปรงนุ่ม
                                     ไม่แข็งกระด้างเกินไปเพราะจะระคายเคืองต่อเหงือก ทำให้คอฟันสึก</p>
-                                <h5>การแปรงฟันที่ถูกวิธี</h5>
-                                <ul class="text-justify">
+                                <h5 class="text-left">การแปรงฟันที่ถูกวิธี</h5>
+                                <ul>
                                     <li><b>การแปรงฟันด้านข้าง</b>
                                         ให้ขนแปรงทำมุมประมาณ 45 องศากับตัวฟัน
                                         โดยสอดขนแปรงเข้าไประหว่างฟันและเหงือกรอบฟันเล็กน้อย ขยับหัวแปรงไปมาเบาๆ
@@ -997,7 +997,7 @@
                                     <li><b>การแปรงฟันด้านบดเคี้ยว</b> ให้ตั้งแปรงให้ขนแปรงตรงระนาบเดียวกับด้านบดเคี้ยว
                                         แล้วถูไปถูมา</li>
                                 </ul>
-                                <h5 id="pedodontics6">ไหมขัดฟัน (Flossing)</h5>
+                                <h5 id="pedodontics6" class="mt-5">ไหมขัดฟัน (Flossing)</h5>
                                 <p>นอกจากการแปรงฟันให้สะอาดแล้ว ควรใช้ไหมขัดฟัน (Dental Floss)
                                     ร่วมทำความสะอาดตามซอกฟันหรือบริเวณที่ขนแปรงเข้าไม่ถึง โดยการใช้ไหมขัดฟัน
                                     ความยาวประมาณ 18 นิ้ว พันรอบปลายนิ้วกลางทั้งสองข้าง
