--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
                                         ทำให้มองไม่เห็นเครื่องมือที่ใส่ในการจัดฟัน
                                         เหมาะสำหรับคนไข้ที่ไม่ต้องการให้ผู้อื่นเห็นว่าจัดฟัน</li>
                                 </ul>
-                                <h5 id="orthodontics2">ขั้นตอนการจัดฟัน</h5>
+                                <h5 class="mt-4" id="orthodontics2">ขั้นตอนการจัดฟัน</h5>
                                 <ol>
                                     <li><b>ขั้นตอนการตรวจวินิจฉัย และวิเคราะห์โรค</b>
                                         <ul>
@@ -1093,7 +1093,7 @@
                                     <li><b>การตรวจสภาพฟันและการปรับเครื่องมือรายเดือน</b></li>
                                     <li><b>ขั้นตอนการใส่เครื่องมือคงสภาพฟัน ภายหลังจากการถอดเครื่องมือจัดฟัน</b></li>
                                 </ol>
-                                <h5 id="orthodontics3">คำแนะนำการดูแลรักษาขณะได้รับการจัดฟัน</h5>
+                                <h5 class="mt-4" id="orthodontics3">คำแนะนำการดูแลรักษาขณะได้รับการจัดฟัน</h5>
                                 <ul>
                                     <li>ดูแลรักษาสุขภาพฟันด้วยการแปรงฟันและใช้ไหมขัดฟันสม่ำเสมอ</li>
                                     <li>หลีกเลี่ยงการรับประทานอาหารที่แข็งและเหนียว</li>
