Normal About us

--- a/index.html
+++ b/index.html
@@ -62,7 +62,57 @@
     <section class="page-section" id="about">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">About</h2>
+                <h2 class="section-heading text-uppercase">About Us</h2>
+            </div>
+            <div class="row">
+                <div class="py-4 col-lg-6 text-center">
+                </div>
+                <div class="py-4 col-lg-6 text-left">
+                    <p>ศูนย์ทันตกรรม พีดีซี
+                        จัดตั้งขึ้นจากการรวมกลุ่มทันตแพทย์ที่มีประสบการณ์ทั้งในด้านการรักษาและการจัดการ
+                        ปัจจุบันศูนย์ทันตกรรม พีดีซี เปิดดำเนินการ 2 สาขา คือ สาขางามวงศ์วาน และสาขาบางนา
+                        ซึ่งเปิดดำเนินการปี พ.ศ. 2535 และ 2537 ตามลำดับ</p>
+                    <p>เป้าหมายของเรา คือ การให้บริการแบบมืออาชีพที่มีคุณภาพแก่คนไข้ในสภาวะแวดล้อมที่สะอาด ปลอดภัย
+                        และเอาใจใส่
+                        นอกจากนี้เรายังมุ่งเน้นพัฒนาการรักษาและการบริการเพื่อให้คนไข้ได้รับความพึงพอใจสูงสุดและให้มีคุณภาพชีวิตที่ดีขึ้น
+                    <p>ศูนย์ทันตกรรม พีดีซี ประกอบด้วยทีมงานทันตแพทย์เฉพาะทางและทันตแพทย์ที่มีประสบการณ์
+                        รวมทั้งพนักงานที่มีประสบการณ์และได้รับการฝึกอบรมพัฒนาอย่างต่อเนื่อง
+                        ร่วมให้การรักษาและการบริการที่ดีที่สุดแก่คนไข้ และสิ่งสำคัญ
+                        ที่สุดคือศูนย์ทันตกรรมของเราดูแลคนไข้ทุกคนเสมือนคนในครอบครัวของเรา</p>
+                    <p>ศูนย์ทันตกรรม พีดีซี ทั้ง 2 สาขา ตั้งอยู่ในและใกล้ห้างสรรพสินค้าใหญ่ คือ สาขางามวงศ์วาน
+                        (ตรงข้ามเดอะมอลล์งามวงศ์วาน) และสาขาบางนา (ชั้น 5 เซ็นทรัลซิตี้ บางนา)
+                        เพื่อความสะดวกสำหรับคนไข้ในการมารับการรักษา เมื่อท่านมาซื้อสินค้าและเที่ยวที่ห้างสรรพสินค้า
+                        สถานที่ของเรามีบรรยากาศที่อบอุ่นและเป็นกันเอง และได้รับการดูแลให้สะอาดอยู่เสมอ
+                        อุปกรณ์และเครื่องมือต่างๆ ที่ศูนย์ทันตกรรม พีดีซี ทั้งที่ใช้แล้วทิ้ง
+                        และที่ต้องผ่านขบวนการปราศจากเชื้อ เราทำด้วยระบบที่ทันสมัยได้ตามมาตรฐานสากล
+                        ท่านจึงมั่นใจในระบบป้องกันการติดเชื้อของเราได้เราเปิดทำการทุกวันไม่เว้นวันหยุดนักขัตฤกษ์</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="py-4 col-lg-6 text-left">
+                    <p>PDC Dental Center was established by a group of experienced dentists in both treatment and
+                        management. Currently,
+                        we have 2 branches; Ngamwongwan and Bangna branches that were established in 1992 and 1994,
+                        respectively.</p>
+                    <p>Our goal is to deliver quality and professional services to all patients with clean, safe and
+                        caring environment.
+                        Our commitment is to continuously develop dental treatments and services in order to satisfy our
+                        patients and improve
+                        their quality of life.</p>
+                    <p>At PDC Dental Centers , both qualified specialists, experienced dentists and well-trained staffs
+                        who have long-term experiences are dedicated to provide the best quality of treatment and
+                        services to our patients. The most important is that
+                        you are treated like our family.</p>
+                    <p>Our 2 dental centers are located near or in large department stores; Ngamwongwan branch (opposite
+                        The Mall Ngamwongwan ) and Bangna branch (on the 5 th floor of Central City Bangna ), to make it
+                        convenient access and parking for patients. You can have dental care when you go shopping at the
+                        department stores. Our spaces are clean, warm and friendly atmosphere . At PDC Dental Centers,
+                        all instruments are both disposable instruments and are sterilized by the up-to-date system upon
+                        international standards. You can trust our infection control system.</p>
+                    <p>PDC Dental Centers open everyday for your convenience.</p>
+                </div>
+                <div class="py-4 col-lg-6 text-center">
+                </div>
             </div>
         </div>
     </section>
