--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         <div class=" container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-md-6 mb-4">
@@ -200,6 +201,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Services</h2>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="accordion" id="accordionExample">
                 <!-- Oral Surgery-->
@@ -538,6 +540,7 @@
         <div class=" container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Dental Knowledge</h2>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-lg-4 col-sm-6 mb-4">
@@ -690,6 +693,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Frequently Asked Questions</h2>
+                <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="accordion" id="accordion2">
                 <div class="card">
