Edit wording and spacing

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                 <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="row">
-                <div class="about-button col-md-3 text-center mb-3" data-toggle="collapse" href="#long-history"
-                    aria-expanded="false" aria-controls="long-history">
+                <div class="about-button col-md-3 text-center mb-3" data-toggle="collapse" href="#long-experience"
+                    aria-expanded="false" aria-controls="long-experience">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="about-button-heading mt-3 mb-0">ประวัติยาวนาน</h4>
-                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Long History</h4>
-                    <div class="collapse" id="long-history">
+                    <h4 class="about-button-heading mt-3 mb-0">ประสบการณ์</h4>
+                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Long Experience</h4>
+                    <div class="collapse" id="long-experience">
                         <div class="card card-body pt-0"></div>
                         <p class="text-muted">ศูนย์ทันตกรรม พี ดี ซี
                             จัดตั้งขึ้นจากการรวมกลุ่มทันตแพทย์ที่มีประสบการณ์ทั้งในด้านการรักษาและการจัดการ
@@ -111,15 +111,15 @@
                             our patients and improve their quality of life.</p>
                     </div>
                 </div>
-                <div class="about-button col-md-3 text-center mb-3" data-toggle="collapse" href="#specialist"
-                    aria-expanded="false" aria-controls="specialist">
+                <div class="about-button col-md-3 text-center mb-3" data-toggle="collapse" href="#expertise"
+                    aria-expanded="false" aria-controls="expertise">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-user-md fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="about-button-heading mt-3 mb-0">เฉพาะทาง</h4>
-                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Specialist</h4>
-                    <div class="collapse" id="specialist">
+                    <h4 class="about-button-heading mt-3 mb-0">เชี่ยวชาญ</h4>
+                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Expertise</h4>
+                    <div class="collapse" id="expertise">
                         <div class="card card-body pt-0"></div>
                         <p class="text-muted">ศูนย์ทันตกรรม พีดีซี
                             ประกอบด้วยทีมงานทันตแพทย์เฉพาะทางและทันตแพทย์ที่มีประสบการณ์
@@ -165,7 +165,7 @@
                 <h3 class="section-subheading text-muted"></h3>
             </div>
             <div class="row d-flex justify-content-around">
-                <div class="col-md-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="portfolio-item team-item">
                         <a class="portfolio-link" data-toggle="modal" href="#ngamwongwan-team">
                             <div class="portfolio-hover">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="portfolio-item team-item">
                         <a class="portfolio-link" data-toggle="modal" href="#bangna-team">
                             <div class="portfolio-hover">
@@ -876,8 +876,7 @@
                     <div class="pb-3 my-2 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="tel:6629527475" target="_blank"><i
                                 class="fas fa-phone"></i></a>
-                        <a class="btn btn-dark btn-social mx-2"
-                            href="https://www.facebook.com/messages/t/pdcdentalcenter" target="_blank"><i
+                        <a class="btn btn-dark btn-social mx-2" href="m.me/pdcdentalcenter" target="_blank"><i
                                 class="fab fa-facebook-messenger"></i></a>
                     </div>
                     <h5>ศูนย์ทันตกรรม พีดีซี สาขางามวงศ์วาน</h5>
@@ -896,8 +895,8 @@
                         Office Hour : Mon.-Sun. 10.00 am.-8.00 pm.<br></p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3873.704478130872!2d100.54021371298018!3d13.856769390279556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29cbb1795ad77%3A0x3536be6f6a9cdc4!2z4Lio4Li54LiZ4Lii4LmM4LiX4Lix4LiZ4LiV4LiB4Lij4Lij4Lih4oCLIOC4nuC4teKAi-C4lOC4teKAi-C4i-C4teKAiyBQREMgRGVudGFsIENlbnRlcg!5e0!3m2!1sen!2sth!4v1600207468543!5m2!1sen!2sth"
-                        width="400" height="300" frameborder="0" style="border:0; margin-top:0.5rem;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
+                        class="contact-map" frameborder="0" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
                 </div>
                 <div class="py-4 col-lg-6 text-center">
                     <div class="pb-3 my-2 my-lg-0">
@@ -922,8 +921,8 @@
                         Office Hour : Mon.-Fri. 10.30 am.-8.00 pm., Sat.-Sun. 10.00 am.-8.00 pm.<br></p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3876.8041968287675!2d100.634711!3d13.669667!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe3edda3d25621172!2z4LmA4LiL4LmH4LiZ4LiX4Lij4Lix4Lil4Lie4Lil4Liy4LiL4LiyIOC4muC4suC4h-C4meC4sg!5e0!3m2!1sth!2sth!4v1600208026273!5m2!1sth!2sth"
-                        width="400" height="300" frameborder="0" style="border:0; margin-top:0.5rem;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
+                        class="contact-map" frameborder="0" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
 
                 </div>
             </div>
